--- a/front-end/webapp/src/app/modules/internacion/components/signos-vitales-summary/signos-vitales-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/signos-vitales-summary/signos-vitales-summary.component.html
@@ -1,8 +1,10 @@
 <app-summary-card [header]="signosVitalesSummary">
-	<mat-card-content class="flex-row">
-		<app-signo-vital-current-previous
-			*ngFor="let signoVital of signosVitales"
-			[data]="signoVital">
-		</app-signo-vital-current-previous>
+	<mat-card-content>
+		<div fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.xs="center center" fxLayout.xs="column">
+			<app-signo-vital-current-previous
+				*ngFor="let signoVital of signosVitales"
+				[data]="signoVital">
+			</app-signo-vital-current-previous>
+		</div>
 	</mat-card-content>
 </app-summary-card>
