--- a/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
@@ -28,7 +28,7 @@
 
 				<ng-container *ngFor="let column of diagnosis.columns" [matColumnDef]="column.def">
 					<th *matHeaderCellDef>{{ column.header | translate }}</th>
-					<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+					<td mat-cell *matCellDef="let element"> {{ column.display(element) }} </td>
 				</ng-container>
 
 				<tr mat-header-row *matHeaderRowDef="diagnosis.displayedColumns"></tr>
@@ -60,7 +60,7 @@
 
 				<ng-container *ngFor="let column of personalHistories.columns" [matColumnDef]="column.def">
 					<th *matHeaderCellDef>{{ column.header | translate }}</th>
-					<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+					<td mat-cell *matCellDef="let element"> {{ column.display(element) }} </td>
 				</ng-container>
 
 				<tr mat-header-row *matHeaderRowDef="personalHistories.displayedColumns"></tr>
@@ -93,7 +93,7 @@
 
 				<ng-container *ngFor="let column of familyHistories.columns" [matColumnDef]="column.def">
 					<th *matHeaderCellDef>{{ column.header | translate }}</th>
-					<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+					<td mat-cell *matCellDef="let element"> {{ column.display(element) }} </td>
 				</ng-container>
 
 				<tr mat-header-row *matHeaderRowDef="familyHistories.displayedColumns"></tr>
@@ -126,7 +126,7 @@
 
 				<ng-container *ngFor="let column of allergies.columns" [matColumnDef]="column.def">
 					<th *matHeaderCellDef>{{ column.header | translate }}</th>
-					<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+					<td mat-cell *matCellDef="let element"> {{ column.display(element) }} </td>
 				</ng-container>
 
 				<tr mat-header-row *matHeaderRowDef="allergies.displayedColumns"></tr>
@@ -166,7 +166,7 @@
 
 				<ng-container *ngFor="let column of inmunizations.columns" [matColumnDef]="column.def">
 					<th *matHeaderCellDef>{{ column.header | translate }}</th>
-					<td mat-cell *matCellDef="let element"> {{ column.text(element) }} </td>
+					<td mat-cell *matCellDef="let element"> {{ column.display(element) }} </td>
 				</ng-container>
 
 				<tr mat-header-row *matHeaderRowDef="inmunizations.displayedColumns"></tr>
