--- a/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/home/home.component.html
@@ -3,7 +3,7 @@
 		<h2 class="page-title" [translate]="'pacientes.home.TITLE'"></h2>
 		<app-search-create></app-search-create>
 	</section>
-	<section>
+	<section *featureFlag="'habilitarEditarPaciente'">
 		<h2 class="page-title" [translate]="'pacientes.home.TITLE_SEARCH'"></h2>
 		<app-pacientes-table></app-pacientes-table>
 	</section>
