--- a/front-end/webapp/src/app/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
@@ -4,10 +4,10 @@
 			<h2 class="page-title" [translate]="'internaciones.nota-evolucion.TITLE'"></h2>
 			<h3 [translate]="'internaciones.nota-evolucion.SUBTITLE'"></h3>
 		</section>
-		<section id="diagnosticos" *hasRole="['ESPECIALISTA_MEDICO']">
+		<section id="diagnosticos" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 			<app-diagnosticos [(diagnosis)]="diagnosticos"></app-diagnosticos>
 		</section>
-		<section id="observations" *hasRole="['ESPECIALISTA_MEDICO']">
+		<section id="observations" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 			<h2 [translate]="'internaciones.anamnesis.observations.TITLE'"></h2>
 			<mat-card>
 				<mat-card-content formGroupName="observations">
@@ -63,7 +63,7 @@
 				</mat-card-content>
 			</mat-card>
 		</section>
-		<section id="signos-vitales" *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+		<section id="signos-vitales" *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
 			<h2 [translate]="'internaciones.anamnesis.vital-signs.form.TITLE'"></h2>
 			<mat-card>
 				<mat-card-content class="vital-signs" formGroupName="vitalSigns">
@@ -140,7 +140,7 @@
 				</mat-card-content>
 			</mat-card>
 		</section>
-		<section id="datos-antropometricos" *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+		<section id="datos-antropometricos" *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
 			<h2 [translate]="'internaciones.anamnesis.datos-antropometricos.TITLE'"></h2>
 			<mat-card class="datos-antropometricos-card">
 				<mat-card-content formGroupName="anthropometricData">
@@ -172,10 +172,10 @@
 				</mat-card-content>
 			</mat-card>
 		</section>
-		<section id="alergias" *hasRole="['ESPECIALISTA_MEDICO']">
+		<section id="alergias" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 			<app-alergias [(allergies)]="allergies"></app-alergias>
 		</section>
-		<section id="vacunas" *hasRole="['ESPECIALISTA_MEDICO']">
+		<section id="vacunas" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 			<app-vacunas [(inmunizations)]="inmunizations"></app-vacunas>
 		</section>
 		<section id="buttons" class="form-buttons">
@@ -183,7 +183,7 @@
 				<span class="uppercase" [translate]="'buttons.BACK'"></span>
 			</button>
 			<button id="sign-confirm" mat-raised-button type="submit" color="primary"
-				*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+				*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
 				<span class="uppercase" [translate]="'internaciones.anamnesis.buttons.CONFIRM'"></span>
 			</button>
 		</section>
