--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -13,7 +13,7 @@
 						</button>
 					</ng-container>
 
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
 						<button mat-flat-button color="primary" fxFlexFill.xs (click)="goToNotaEvolucion()">
 							<span class="uppercase"
 								[translate]="'internaciones.internacion-paciente.actions.ADD_NOTA_EVOLUCION'"></span>
@@ -38,26 +38,26 @@
 			</div>
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-					<ng-container *hasRole="['ADMINISTRATIVO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+					<ng-container *hasRole="['ADMINISTRATIVO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-patient-card [patient]="patient$ | async"></app-patient-card>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-signos-vitales-summary [internmentEpisodeId]="internmentEpisodeId">
 						</app-signos-vitales-summary>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId">
 						</app-antropometricos-summary>
 					</ng-container>
 					<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
 						<app-antecedentes-personales-summary [internmentEpisodeId]="internmentEpisodeId"></app-antecedentes-personales-summary>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-antecedentes-familiares-summary [internmentEpisodeId]="internmentEpisodeId"></app-antecedentes-familiares-summary>
 					</ng-container>
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-					<ng-container *hasRole="['ADMINISTRATIVO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']">
+					<ng-container *hasRole="['ADMINISTRATIVO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-summary-card [header]="internacionSummary">
 							<mat-card-content>
 								<app-internment-episode-summary [internmentEpisode]="internmentEpisodeSummary">
@@ -65,21 +65,21 @@
 							</mat-card-content>
 						</app-summary-card>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-main-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId">
 						</app-main-diagnosis-summary>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId" [editable]="!epicrisisDoc">
 						</app-diagnosis-summary>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"></app-alergias-summary>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-medicacion-summary [internmentEpisodeId]="internmentEpisodeId"></app-medicacion-summary>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 						<app-vacunas-summary [internmentEpisodeId]="internmentEpisodeId"></app-vacunas-summary>
 					</ng-container>
 				</div>
