tg-653 add icono para crear evaluacion clinica en resumenes de diagnosticos de la ficha del paciente

--- a/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
@@ -4,6 +4,9 @@
 			<span class="capitalize-first-letter">
 				{{ mainDiagnosis.snomed.pt }}
 			</span>
+			<button mat-icon-button color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
+				<mat-icon fontSet="material-icons-outlined">note_add</mat-icon>
+			</button>
 		</mat-list-item>
 	</mat-list>
 	<ng-template #noInfo>
