tg-665. [FE] Dejar opcional el médico responsable en la creación de una internación para Geriatricos.

--- a/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/internment-episode-summary/internment-episode-summary.component.html
@@ -13,7 +13,7 @@
 
 	<mat-divider inset></mat-divider>
 
-	<mat-list-item id="doctor">
+	<mat-list-item id="doctor" *ngIf="internmentEpisode?.doctor">
 		<mat-icon color="primary" mat-list-icon>person_outline</mat-icon>
 		<span class="mat-body-2">
 			{{internmentEpisode?.doctor.firstName}} {{internmentEpisode?.doctor.lastName}}
