--- a/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
@@ -2,8 +2,7 @@
 	<form [formGroup]="formSearch" (ngSubmit)="search()">
 		<mat-card-header>
 			<mat-card-title [translate]="'pacientes.home.find_add_section.TITLE'"></mat-card-title>
-			<mat-card-subtitle>
-				Ingresá un nuevo paciente
+			<mat-card-subtitle [translate]="'pacientes.home.SUBTITLE'">
 			</mat-card-subtitle>
 		</mat-card-header>
 		<mat-card-content>
