--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
@@ -2,7 +2,7 @@
 	<mat-card-header>
 		<mat-icon fontSet="material-icons-outlined">{{ header.matIcon }}</mat-icon>
 		<mat-card-title>
-			<span>{{ header.title }}</span>
+			<span>{{ header.title | translate }}</span>
 		</mat-card-title>
 	</mat-card-header>
 	<ng-content></ng-content>
