--- a/back-end/hospital-api/src/main/resources/templates/epicrisis.html
+++ b/back-end/hospital-api/src/main/resources/templates/epicrisis.html
@@ -28,7 +28,7 @@
         <strong>- Sexo: </strong><label  th:text="${patient.person.gender.description}"></label><br/>
     </div>
 
-    <h3>Diagnóstico principal</h3>
+    <h3 [translate]="'internaciones.epicrisis.diagnosticos.TITLE_PRINCIPAL'"> </h3>
     <div class="row" th:if="${mainDiagnosis == null}">
         <dl>
             <dd><p >Sin información</p></dd>
@@ -44,7 +44,7 @@
         </dl>
     </div>
 
-    <h3>Otros diagnósticos</h3>
+    <h3 [translate]="'internaciones.epicrisis.diagnosticos.TITLE'"></h3>
     <div class="row" th:if="${#lists.isEmpty(diagnosis)}">
         <dl class="lista" >
             <dd><p >Sin cambios registrados</p></dd>
