tg-692. [P1] No se debe ver el diagnostico principal en internación

--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -65,7 +65,7 @@
 							</mat-card-content>
 						</app-summary-card>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
 						<app-main-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId">
 						</app-main-diagnosis-summary>
 					</ng-container>
