--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -3,14 +3,14 @@
 		<section id="title">
 			<h2 class="page-title" [translate]="'internaciones.anamnesis.TITLE'"></h2>
 			<h3 [translate]="'internaciones.anamnesis.SUBTITLE'"></h3>
-		</section>
-
-		<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
-			<section id="diagnostico-principal">
-				<app-diagnostico-principal [diagnosis]="mainDiagnosis" (onChange)="setMainDiagnosis($event)"></app-diagnostico-principal>
-			</section>
+		</section>		
+		<ng-container *featureFlag="'mainDiagnosisRequired'">
+			<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+				<section id="diagnostico-principal">
+					<app-diagnostico-principal [diagnosis]="mainDiagnosis" (onChange)="setMainDiagnosis($event)"></app-diagnostico-principal>
+				</section>
+			</ng-container>
 		</ng-container>
-
 		<section id="diagnosticos">
 			<app-diagnosticos [(diagnosis)]="diagnosticos"></app-diagnosticos>
 		</section>
