tg-694. [P1] No se ve el botón confirmar en evaluación clínica

--- a/front-end/webapp/src/app/modules/internacion/routes/evaluacion-clinica-diagnosticos/evaluacion-clinica-diagnosticos.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/evaluacion-clinica-diagnosticos/evaluacion-clinica-diagnosticos.component.html
@@ -105,7 +105,7 @@
 						<span class="uppercase" [translate]="'buttons.BACK'"></span>
 					</button>
 					<button id="sign-confirm" mat-raised-button type="submit" color="primary"
-						*hasRole="['ESPECIALISTA_MEDICO']">
+						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
 						<span class="uppercase" [translate]="'buttons.CONFIRM'"></span>
 					</button>
 				</section>
