--- a/front-end/webapp/src/app/app.component.html
+++ b/front-end/webapp/src/app/app.component.html
@@ -1,3 +1,12 @@
-<div class="app mat-typography mat-app-background">
-	<router-outlet></router-outlet>
-</div>
+<ng-container *ngIf="(publicInfo$ | async) as publicInfo; else loading">
+	<div class="app mat-typography mat-app-background " [ngClass]="publicInfo.flavor">
+		<router-outlet></router-outlet>
+	</div>
+</ng-container>
+<ng-template #loading>
+	<div class="loading">
+		<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+	</div>
+</ng-template>
+
+
