tg-681 add footer segun flavor add title segun flavor add minor styles

--- a/front-end/webapp/src/app/modules/presentation/components/bar/bar.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/bar/bar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar [style.position]="position">
 	<mat-toolbar-row class="mat-elevation-z6">
 		<ng-content></ng-content>
-		<img src="assets/images/ministerio-salud.png" alt="Ministerio de salud - Presidencia de la nación">
+		<span class="title" [translate]="'app.TITLE'"></span>
 	</mat-toolbar-row>
 </mat-toolbar>
