--- a/front-end/webapp/src/app/modules/home/routes/instituciones/instituciones.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/instituciones/instituciones.component.html
@@ -11,7 +11,7 @@
 					<span *ngSwitchDefault>Tiene acceso a las siguientes instituciones:</span>
 				</div>
 				<mat-list-item *ngFor="let institution of institutions" role="listitem" (click)="ingresar(institution)">
-					<mat-icon mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
+					<mat-icon color="primary" mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
 					<h3 matLine >{{institution.name}}</h3>
 				</mat-list-item>
 			</mat-action-list>
@@ -27,7 +27,7 @@
 		</mat-card-header>
 		<mat-action-list role="list">
 			<mat-list-item role="listitem" (click)="ingresar({id: -1})">
-				<mat-icon mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
+				<mat-icon color="primary" mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
 				<h3 matLine >Backoffice</h3>
 			</mat-list-item>
 		</mat-action-list>
