--- a/front-end/webapp/src/app/modules/home/routes/profile/profile.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/profile/profile.component.html
@@ -8,7 +8,7 @@
 			<mat-divider></mat-divider>
 			<div mat-header>Roles</div>
 			<mat-list-item *ngFor="let roleAssignment of roleAssignments" role="listitem">
-				<mat-icon mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
+				<mat-icon color="primary" mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
 				<h3 matLine [translate]="roleAssignment.label"></h3>
 				<p matLine *ngIf="roleAssignment.institution">
 					{{roleAssignment.institution.name}}
@@ -21,8 +21,8 @@
 			<mat-progress-bar mode="indeterminate"></mat-progress-bar>
 		</ng-template>
 
-		<mat-card-actions>
-			<button mat-flat-button color="warn" (click)="logout()">CERRAR SESION</button>
+		<mat-card-actions align="end">
+			<button mat-flat-button color="warn" (click)="logout()">CERRAR SESIÓN</button>
 		</mat-card-actions>
 	</mat-card>
 </app-content>
