--- a/front-end/webapp/src/app/modules/presentation/components/footer/footer.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <div class="footer-container">
-	<img src="assets/images/logos/pladema.png" alt="pladema">
-	<img src="assets/images/logos/unicen.png" alt="unicen">
+	<ng-container *ngFor="let img of images">
+		<img src="{{img.location}}" alt="{{img.alt}}">
+	</ng-container>
 </div>
